force-app/main/default/objects/CAA_FormField__mdt/CAA_FormField__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata for visibility of fields on the form per market</description>
    <label>CAA_FormField</label>
    <pluralLabel>CAA_FormFields</pluralLabel>
</CustomObject>