force-app/main/default/objects/CAA_FormField__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <description>Api name of field on Contact object to be used on Shift Contact Form</description>
    <label>API Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>