force-app/main/default/objects/CAA_FormField__mdt/fields/CAA_BlockableOnDeclaration__c.field-meta.xml
<CustomField>
    <fullName>CAA_BlockableOnDeclaration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the field is a picklist providing Yes/No/Not Declared functionality which is blocked upon choosing Yes/No</description>
    <label>Blockable On Declaration</label>
    <type>Checkbox</type>
</CustomField>