force-app/main/default/objects/CAA_FormField__mdt/fields/CCR_Homecountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_Homecountry__c</fullName>
    <description>Homecountry ISO value or Call Center</description>
    <label>CCR Homecountry</label>
    <length>8</length>
    <type>Text</type>
</CustomField>