force-app/main/default/objects/CAA_FormField__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country for which specified field should be visible</description>
    <label>Country</label>
    <length>8</length>
    <type>Text</type>
</CustomField>