force-app/main/default/objects/CAA_FormField__mdt/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <label>Custom Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>