force-app/main/default/objects/CAA_FormField__mdt/fields/DependentField1__c.field-meta.xml
<CustomField>
    <fullName>DependentField1__c</fullName>
    <description>Field dependent on this field</description>
    <label>DependentField1</label>
    <length>70</length>
    <type>Text</type>
</CustomField>