force-app/main/default/objects/CAA_FormField__mdt/fields/DependentField2__c.field-meta.xml
<CustomField>
    <fullName>DependentField2__c</fullName>
    <description>Field dependent on this field</description>
    <label>DependentField2</label>
    <length>70</length>
    <type>Text</type>
</CustomField>