force-app/main/default/objects/CAA_FormField__mdt/fields/DependentField3__c.field-meta.xml
<CustomField>
    <fullName>DependentField3__c</fullName>
    <description>Field dependent on this field</description>
    <label>DependentField3</label>
    <length>70</length>
    <type>Text</type>
</CustomField>