force-app/main/default/objects/CAA_FormField__mdt/fields/Field_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Default_Value__c</fullName>
    <description>Default value of field</description>
    <label>Field_Default_Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>