force-app/main/default/objects/CAA_FormField__mdt/fields/isMapInput__c.field-meta.xml
<CustomField>
    <fullName>isMapInput__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMapInput</label>
    <type>Checkbox</type>
</CustomField>