force-app/main/default/objects/CAA_FormField__mdt/fields/IsNumeric__c.field-meta.xml
<CustomField>
    <fullName>IsNumeric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Describes if field is numeric then we should use numeric keyboard. If it is checked - use numeric keyboard</description>
    <inlineHelpText>Describes if field is numeric then we should use numeric keyboard. If it is checked - use numeric keyboard</inlineHelpText>
    <label>IsNumeric</label>
    <type>Checkbox</type>
</CustomField>