force-app/main/default/objects/CAA_FormField__mdt/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>Language for which specified field should be visible</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ar</fullName>
            </value>
            <value>
                <fullName>co</fullName>
            </value>
            <value>
                <fullName>cs</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>es-GT</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
            <value>
                <fullName>gt</fullName>
            </value>
            <value>
                <fullName>hr</fullName>
            </value>
            <value>
                <fullName>hy</fullName>
            </value>
            <value>
                <fullName>ir</fullName>
            </value>
            <value>
                <fullName>it</fullName>
            </value>
            <value>
                <fullName>iw</fullName>
            </value>
            <value>
                <fullName>ko</fullName>
                <default>true</default>
                <label>ko</label>
            </value>
            <value>
                <fullName>pl</fullName>
            </value>
            <value>
                <fullName>ro</fullName>
            </value>
            <value>
                <fullName>sh</fullName>
            </value>
            <value>
                <fullName>sk</fullName>
            </value>
            <value>
                <fullName>sl</fullName>
            </value>
            <value>
                <fullName>rs</fullName>
                <isActive>false</isActive>
                <label>rs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>