force-app/main/default/objects/CAA_FormField__mdt/fields/Maximum_Length__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Length__c</fullName>
    <description>Maximum length of input specified in Form Field</description>
    <label>Maximum Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>