force-app/main/default/objects/CAA_FormField__mdt/fields/OrderOnContactList__c.field-meta.xml
<CustomField>
    <fullName>OrderOnContactList__c</fullName>
    <description>This field determines column order on contact list</description>
    <label>OrderOnContactList</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>