force-app/main/default/objects/CAA_FormField__mdt/fields/OrderOnGlobalSearchResult__c.field-meta.xml
<CustomField>
    <fullName>OrderOnGlobalSearchResult__c</fullName>
    <description>This field set order of column in global search result list</description>
    <label>OrderOnGlobalSearchResult</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>