force-app/main/default/objects/CAA_FormField__mdt/fields/OrderOnPP__c.field-meta.xml
<CustomField>
    <fullName>OrderOnPP__c</fullName>
    <description>Field&apos;s order on the Profile Page</description>
    <label>OrderOnPP</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>