force-app/main/default/objects/CAA_FormField__mdt/fields/OrderOnShortRegistration__c.field-meta.xml
<CustomField>
    <fullName>OrderOnShortRegistration__c</fullName>
    <label>OrderOnShortRegistration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>