force-app/main/default/objects/CAA_FormField__mdt/fields/Regex_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Regex_Pattern__c</fullName>
    <description>Regex aplied to field</description>
    <label>Regex Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>