force-app/main/default/objects/CAA_FormField__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is field required for saving?</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>