force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredConversion__c.field-meta.xml
<CustomField>
    <fullName>RequiredConversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Conversion</description>
    <label>RequiredConversion</label>
    <type>Checkbox</type>
</CustomField>