force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredDeviceActivation__c.field-meta.xml
<CustomField>
    <fullName>RequiredDeviceActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiredDeviceActivation</label>
    <type>Checkbox</type>
</CustomField>