force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredFollowUp__c.field-meta.xml
<CustomField>
    <fullName>RequiredFollowUp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Follow Up</description>
    <label>RequiredFollowUp</label>
    <type>Checkbox</type>
</CustomField>