force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredGT__c.field-meta.xml
<CustomField>
    <fullName>RequiredGT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Guided Trial</description>
    <label>RequiredGT</label>
    <type>Checkbox</type>
</CustomField>