force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredLend__c.field-meta.xml
<CustomField>
    <fullName>RequiredLend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Lend</description>
    <label>RequiredLend</label>
    <type>Checkbox</type>
</CustomField>