force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredMassGT__c.field-meta.xml
<CustomField>
    <fullName>RequiredMassGT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiredMassGT</label>
    <type>Checkbox</type>
</CustomField>