force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredPurchase__c.field-meta.xml
<CustomField>
    <fullName>RequiredPurchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Purchase</description>
    <label>RequiredPurchase</label>
    <type>Checkbox</type>
</CustomField>