force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredQoach__c.field-meta.xml
<CustomField>
    <fullName>RequiredQoach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiredQoach</label>
    <type>Checkbox</type>
</CustomField>