force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredReturn__c.field-meta.xml
<CustomField>
    <fullName>RequiredReturn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Return</description>
    <label>RequiredReturn</label>
    <type>Checkbox</type>
</CustomField>