force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredStandby__c.field-meta.xml
<CustomField>
    <fullName>RequiredStandby__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the field required to switch stage to Standby</description>
    <label>RequiredStandby</label>
    <type>Checkbox</type>
</CustomField>