force-app/main/default/objects/CAA_FormField__mdt/fields/RequiredSwap__c.field-meta.xml
<CustomField>
    <fullName>RequiredSwap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequiredSwap</label>
    <type>Checkbox</type>
</CustomField>