force-app/main/default/objects/CAA_FormField__mdt/fields/Reverse_Dependent_Fields__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Dependent_Fields__c</fullName>
    <label>Reverse Dependent Fields</label>
    <length>70</length>
    <type>Text</type>
</CustomField>