force-app/main/default/objects/CAA_FormField__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Information</fullName>
                <default>true</default>
                <label>Contact Information</label>
            </value>
            <value>
                <fullName>Address Information</fullName>
            </value>
            <value>
                <fullName>Approvals &amp; declarations</fullName>
            </value>
            <value>
                <fullName>Notes</fullName>
            </value>
            <value>
                <fullName>Calendar Details</fullName>
            </value>
            <value>
                <fullName>Related To</fullName>
            </value>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Consumer Information</fullName>
            </value>
            <value>
                <fullName>Reminder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>