force-app/main/default/objects/CAA_FormField__mdt/fields/VisibleOnContactList__c.field-meta.xml
<CustomField>
    <fullName>VisibleOnContactList__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked field is visible as column in contact list</description>
    <label>VisibleOnContactList</label>
    <type>Checkbox</type>
</CustomField>