force-app/main/default/objects/CAA_FormField__mdt/fields/VisibleOnForm__c.field-meta.xml
<CustomField>
    <fullName>VisibleOnForm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the field should be visible on the regular form</description>
    <label>VisibleOnForm</label>
    <type>Checkbox</type>
</CustomField>