force-app/main/default/objects/CAA_FormField__mdt/fields/VisibleOnGlobalSearchResult__c.field-meta.xml
<CustomField>
    <fullName>VisibleOnGlobalSearchResult__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked field is visible as column in global search result for contacts</description>
    <label>VisibleOnGlobalSearchResult</label>
    <type>Checkbox</type>
</CustomField>