force-app/main/default/objects/CAA_FormField__mdt/fields/VisibleOnPP__c.field-meta.xml
<CustomField>
    <fullName>VisibleOnPP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the field should be visible on the Profile Page</description>
    <label>VisibleOnPP</label>
    <type>Checkbox</type>
</CustomField>