force-app/main/default/objects/CAA_FormField__mdt/fields/VisibleOnShortRegistration__c.field-meta.xml
<CustomField>
    <fullName>VisibleOnShortRegistration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VisibleOnShortRegistration</label>
    <type>Checkbox</type>
</CustomField>