force-app/main/default/objects/CAA_FormField__mdt/validationRules/CAA_VisibleOnShortRegistration_Acti.validationRule-meta.xml
<ValidationRule>
    <fullName>CAA_VisibleOnShortRegistration_Acti</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
(API_Name__c &lt;&gt; &quot;FirstName&quot; &amp;&amp; API_Name__c &lt;&gt; &quot;LastName&quot; &amp;&amp; API_Name__c &lt;&gt; &quot;MobilePhone&quot; &amp;&amp; API_Name__c &lt;&gt; &quot;CCR_RegistrationConsumerID__c&quot; &amp;&amp; API_Name__c &lt;&gt; &quot;Email&quot;),
VisibleOnShortRegistration__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>VisibleOnShortRegistration__c</errorDisplayField>
    <errorMessage>You can set VisibleOnShortRegistration__c only on FirstName, LastName, MobilePhone, ReferredBy, Email</errorMessage>
</ValidationRule>