force-app/main/default/objects/CAA_FormField__mdt/listViews/CO_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>CO_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Section__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>contains</operation>
        <value>es_co</value>
    </filters>
    <label>CO_By Country Code</label>
    <language>en_US</language>
</ListView>