force-app/main/default/objects/CAA_FormField__mdt/listViews/CZ_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>CZ_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>cs_CZ</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <label>CZ_By Country Code</label>
    <language>en_US</language>
</ListView>