force-app/main/default/objects/CAA_FormField__mdt/listViews/GT_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>GT_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>es_GT</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <label>GT_By Country Code</label>
    <language>en_US</language>
</ListView>