force-app/main/default/objects/CAA_FormField__mdt/listViews/KR_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>KR_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Country__c</columns>
    <columns>Language__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>ko_KR</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>TermsAndConditions,Asset</value>
    </filters>
    <label>KR_By Country Code</label>
    <language>en_US</language>
</ListView>