force-app/main/default/objects/CAA_FormField__mdt/listViews/Mass_Update_View_Edit_as_req_d.listView-meta.xml
<ListView>
    <fullName>Mass_Update_View_Edit_as_req_d</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Default_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeveloperName</field>
        <operation>contains</operation>
        <value>_birth</value>
    </filters>
    <label>Mass Update View (Edit as req&apos;d)</label>
    <language>en_US</language>
</ListView>