force-app/main/default/objects/CAA_FormField__mdt/listViews/MY_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>MY_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>contains</operation>
        <value>MY</value>
    </filters>
    <label>MY_By Country Code</label>
    <language>en_US</language>
</ListView>