force-app/main/default/objects/CAA_FormField__mdt/listViews/PL_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>PL_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Country__c</columns>
    <columns>CCR_Homecountry__c</columns>
    <columns>Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>pl_PL</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <label>PL_By Country Code</label>
    <language>en_US</language>
</ListView>