force-app/main/default/objects/CAA_FormField__mdt/listViews/Serbia_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>Serbia_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>VisibleOnForm__c</columns>
    <columns>VisibleOnShortRegistration__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>startsWith</operation>
        <value>sh_CS</value>
    </filters>
    <label>Serbia_By Country Code</label>
    <language>en_US</language>
</ListView>