force-app/main/default/objects/CAA_FormField__mdt/listViews/Slovenia_By_Country_Code.listView-meta.xml
<ListView>
    <fullName>Slovenia_By_Country_Code</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>sl_SI</value>
    </filters>
    <label>Slovenia_By Country Code</label>
    <language>en_US</language>
</ListView>